recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: identifier expected but ')' found.
    left(90.)
            ^FourSquare:11: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:12: error: identifier expected but ')' found.
    right(90.)
             ^