recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for (i<-1 to 4){
    faitCarre()
    left(90.)
  }
}

def faitCarre(){
  //Fait un carre en avancant tout droit de la position de depart pui se repositionne dans la position initiale
  for (i<- 1 to 4){
    forward(100.)
    right(90.)
  }
}